<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EZPARK</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send"> Send</string>
    <string name="new_registration">Please provide your account details</string>
    <string name="hello_world">Here, the user will be able to make a reservation, cancel a reservation, edit their account details, view history, and access a "Find my car" feature</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_user">UserActivity</string>
	<string name="enter_username">Username</string>
	<string name="enter_password">Password</string>
	<string name="Login">Login</string>
	<string name="Register">Register</string>
	<string name="firstlastname">First and Last Name</string>
	<string name="username">Desired Username</string>
	<string name="plate1">Car #1 License Plate</string>
	<string name="plate2">Car #2 License Plate</string>
	<string name="phonenumber">Phone Number</string>
	<string name="cctype">Credit Card Type</string>
	<string name="ccnum">Credit Card Number</string>
	<string name="ccexpdate">Credit Card Expiry Date</string>
	<string name="Submit">Submit</string>
	
    <style name="DefaultButtonText">
       <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#979797</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#f9f9f9</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">1</item>
    </style>
</resources>
