<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.myfirstapp.RegisterActivity" 
    android:background="@drawable/register_activity_background">

     <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:background="@drawable/linearlayout_bg"
        android:padding="10dp"
        >
        
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_registration" />
        
        <EditText android:id="@+id/firstlastname"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:hint="@string/firstlastname" 
        	android:padding="10dp"
        	android:layout_margin="4dp"
        	android:textColor='#FF0000'/>
    
		<EditText android:id="@+id/username"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:hint="@string/username" 
        	android:padding="10dp"
        	android:layout_margin="4dp"
        	android:textColor='#FF0000'/>
		
		<EditText android:id="@+id/plate1"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:hint="@string/plate1" 
        	android:padding="10dp"
        	android:layout_margin="4dp"/>
    
	    <EditText android:id="@+id/plate2"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:hint="@string/plate2" 
        	android:padding="10dp"
        	android:layout_margin="4dp"/>
	    
	    <EditText android:id="@+id/phonenumber"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:hint="@string/phonenumber" 
        	android:padding="10dp"
        	android:layout_margin="4dp"
        	android:inputType="phone"/>
	    
	    <EditText android:id="@+id/cctype"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:hint="@string/cctype" 
        	android:padding="10dp"
        	android:layout_margin="4dp"/>
	    
	    <EditText android:id="@+id/ccnum"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:hint="@string/ccnum" 
        	android:padding="10dp"
        	android:layout_margin="4dp"/>
	    
	    <EditText android:id="@+id/ccexpdate"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:hint="@string/ccexpdate" 
        	android:padding="10dp"
        	android:layout_margin="4dp"/>
	    
	    <Button android:id="@+id/SubmitregistrationInfo"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_margin="4dp"
        	android:padding="10dp"
        	android:text="@string/Submit"
        	android:background="@drawable/button_default_bg" 
    		android:onClick="clickedSubmitRegistration"
    		style="@style/DefaultButtonText"/>
	   
   	</LinearLayout>
    </ScrollView>
</RelativeLayout>
