<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
    android:background="@drawable/home_background">
	
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/linearlayout_bg"
        android:padding="10dp"
        >
        
        <EditText android:id="@+id/edit_message"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:hint="@string/enter_username" 
        	android:padding="10dp"
        	android:layout_margin="4dp"/>
    
	    <EditText android:id="@+id/edit_message2"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_margin="4dp"
        	android:padding="10dp"
        	android:hint="@string/enter_password" 
        	android:inputType="textPassword"
        	android:ellipsize="start"/>
    
	    <Button android:id="@+id/login"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_margin="4dp"
        	android:padding="10dp"
        	android:text="@string/Login"
        	android:background="@drawable/button_default_bg" 
    		android:onClick="clickedLogin"
    		style="@style/DefaultButtonText"/>
	    
    	<Button android:id="@+id/Register"
	        android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_margin="4dp"
        	android:padding="10dp"
        	android:text="@string/Register" 
        	android:background="@drawable/button_default_bg"
    		android:onClick="clickedRegister"
    		style="@style/DefaultButtonText"/>
   	</LinearLayout>
</RelativeLayout>
